[project]
authors = [
  {name = "Zalven", email = "zalven.dayao@go.team"},
]
dependencies = [
  "requests>=2.32.3",
  "pre-commit>=3.7.1",
  "uvicorn>=0.30.3",
  "numpy>=2.0.1",
  "pandas>=2.2.2",
  "fastapi>=0.111.1",
  "beautifulsoup4>=4.12.3",
  "mangum>=0.17.0",
]
description = "Microservice toolset for REA"
license = {text = "MIT"}
name = "rea-beta-backend-toolsets"
readme = "README.md"
requires-python = ">=3.12"
version = "0.1.0"

[build-system]
build-backend = "pdm.backend"
requires = ["pdm-backend"]

[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "notebook>=7.2.1",
    "jupyterlab>=4.2.4",
    "proxy-checker>=0.6",
]
[project.scripts]
rea_beta_backend_toolsets = "rea_beta_backend_toolsets.run:main"
